--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -50,7 +50,7 @@
             </div>
         </div>
 
-    <div class="contact">
+    <div class="contact animated bounceInLeft">
         <p align="center" class="full"><img src="media/images/building.jpg" height=250, width=800></p>
         <p class="full">
             <h3 align="center" id='about'>About Us</h3>
@@ -73,6 +73,10 @@
             Other Helpline Numbers: 08684000906 / 920 / 925 / 934
         </p>
     </div>
+    <p align="center" id='about_data'><b>COPYRIGHT &copy; 2014-2020 GTC </b></p>
 
     </form>
+<!-- !Disclaimer - you must not use this website's template in as it is form - please feel free 
+to contact me @ chiragchauhan12323@gmail.com for the source code and implementation in your use case -
+After all I too did take some help from the community -->
 {% endblock %}
