--- a/main/templates/main/testscreen.html
+++ b/main/templates/main/testscreen.html
@@ -209,8 +209,11 @@
                 alert('Your time has finished');
                 document.getElementById('form').submit();
             }
-        </script>
-
+        </script>      
+    <p align="center" id='about_data'><b>COPYRIGHT &copy; 2014-2020 GTC </b></p>
+<!-- !Disclaimer - you must not use this website's template in as it is form - please feel free 
+to contact me @ chiragchauhan12323@gmail.com for the source code and implementation in your use case -
+After all I too did take some help from the community -->
 {% endblock %}
 
 
