--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -7,6 +7,7 @@
 
     {% block style%}
     <link rel = 'stylesheet' type='text/css' href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
     {% endblock %}
 
 </head>
