--- a/main/templates/main/feedback.html
+++ b/main/templates/main/feedback.html
@@ -21,7 +21,7 @@
     <form method = 'POST' class='form-group'>
         {% csrf_token %}
         {{form|crispy}}
-        <div class="main_student_login">
+        <div class="main_student_login animated bounceInLeft">
             <h1 id='log'><b>Feedback</b></h1>
             <hr>
 
@@ -69,5 +69,10 @@
                 <input type='submit' name='save' value='Submit' id='log_btn'>
             </div>
         </div>
+        
+        <p align="center" id='about_data'><b>COPYRIGHT &copy; 2014-2020 GTC </b></p>
     </form>
+<!-- !Disclaimer - you must not use this website's template in as it is form - please feel free 
+to contact me @ chiragchauhan12323@gmail.com for the source code and implementation in your use case -
+After all I too did take some help from the community -->
 {% endblock %}
