--- a/main/templates/main/student.html
+++ b/main/templates/main/student.html
@@ -22,7 +22,7 @@
         <h1 align='center', style='font-size:248%; color:#2193b0;'> Welcome {{data.firstname}} </h1>
     </div>
 
-    <div class='content_admin'>
+    <div class='content_admin animated bounceInLeft'>
         <div class='row'>
             <div class='a'>
                 <form method='POST'>
@@ -43,4 +43,8 @@
             </div>
         </div>
     </div>
+    <p align="center" id='about_data'><b>COPYRIGHT &copy; 2014-2020 GTC </b></p>
+<!-- !Disclaimer - you must not use this website's template in as it is form - please feel free 
+to contact me @ chiragchauhan12323@gmail.com for the source code and implementation in your use case -
+After all I too did take some help from the community -->
 {% endblock %}
