--- a/main/templates/main/studentregister.html
+++ b/main/templates/main/studentregister.html
@@ -20,7 +20,7 @@
     <form method = 'POST' class='form-group'>
         {% csrf_token %}
         {{form|crispy}}
-        <div class="main_register">
+        <div class="main_register animated bounceInLeft">
             <h1 id='log'><b> Register </b></h1>
             <hr>
             <div class="row">
@@ -248,4 +248,8 @@
             }
         }
     </script>
+    <p align="center" id='about_data'><b>COPYRIGHT &copy; 2014-2020 GTC </b></p>
+<!-- !Disclaimer - you must not use this website's template in as it is form - please feel free 
+to contact me @ chiragchauhan12323@gmail.com for the source code and implementation in your use case -
+After all I too did take some help from the community -->
 {% endblock %}
