--- a/main/templates/main/syllabus.html
+++ b/main/templates/main/syllabus.html
@@ -20,10 +20,13 @@
 
     <h1 align='center', style='font-size:270%; color:#2193b0;'> Syllabus </h1>
     
-    <div class='contact'>
+    <div class='contact animated bounceInLeft'>
         <h3 align='left', style='color:#2193b0; margin-left:12%;'>Document will load below</h3>
         <iframe src="https://docs.google.com/gview?url=https://gtcreach.web.app/ressources/syllabus.pdf&embedded=true" style="width:900px; height:900px;" frameborder="0">
         </iframe>
-    </div>
-
+    </div>   
+    <p align="center" id='about_data'><b>COPYRIGHT &copy; 2014-2020 GTC </b></p>
+<!-- !Disclaimer - you must not use this website's template in as it is form - please feel free 
+to contact me @ chiragchauhan12323@gmail.com for the source code and implementation in your use case -
+After all I too did take some help from the community -->
 {% endblock %}
