--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -326,6 +326,17 @@ input[type=submit] {
     cursor: pointer;
   }
 
+  #result_btn {
+    background-color: #2193b0;
+    color: white;
+    font-size: 125%;
+    width: 10%;
+    padding: 18px 18px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
   #admin {
     float: right;
     background-color: #2193b0;
@@ -583,15 +594,15 @@ input[type=submit] {
         .next {
         cursor: pointer;
         position: absolute;
-        top: 50%;
+        top: 41%;
         width: auto;
         padding: 16px;
         margin-top: -22px;
-        color: white;
+        color: black;
         font-weight: bold;
-        font-size: 18px;
+        font-size: 40px;
         transition: 0.6s ease;
-        border-radius: 0 3px 3px 0;
+        border-radius: 3px 3px 3px 3px;
         user-select: none;
         }
 
@@ -603,6 +614,7 @@ input[type=submit] {
 
         /* On hover, add a black background color with a little bit see-through */
         .next:hover {
+        color: white;
         background-color: rgba(0,0,0,0.8);
         }
 
@@ -638,7 +650,7 @@ input[type=submit] {
         transition: background-color 0.6s ease;
         }
 
-        .active, .dot:hover {
+        .dot:hover {
         background-color: #717171;
         }
 
