--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+﻿{% extends 'main/base.html' %}
 {% block title %} HOME {% endblock %}
 
 {% load static %}
@@ -28,7 +28,7 @@
         <div class='content'>
             <input type= 'submit' name='asave' value='Admin' id='admin' >
             <h1 id='welcome'>Ganga Online Scholarship Test</h1>
-            <h3><p id='gst'>GANGA SCHOLARSHIP TEST (GST-2020) is a online - Admission cum Scholarship test for admission in B.Tech, BBA, MBA, BCA, B.Voc. and Diploma courses. GST-2020 is a National Level test will be organized by GANGA TECHNICAL CAMPUS (School of Engineering & Technology -School of Diploma Engineering) a unit of GANGA GROUP OF INSTITUTIONS, DELHI-NCR. The test will be of Multiple Choice Questions based with no negative marking.</p></h3>
+            <h3><p id='gst'>GANGA SCHOLARSHIP TEST (GST-2020) s a online - Admission cum Scholarship test for admission in B.Tech, BBA, MBA, BCA, B.Voc. and Diploma courses. GST-2020 is a National Level test will be organized by GANGA TECHNICAL CAMPUS (School of Engineering & Technology -School of Diploma Engineering) a unit of GANGA GROUP OF INSTITUTIONS, DELHI-NCR. The test will be of Multiple Choice Questions based with no negative marking.</p></h3>
             <div class='row'>
                 <input type= 'submit' name='rsave' value='Register' id='reg' >
                 <input type= 'submit' name='lsave' value='Login' id='login'>
