--- a/main/templates/main/testscreen.html
+++ b/main/templates/main/testscreen.html
@@ -74,10 +74,11 @@
         </div>
     </div>
     </form>
+    <h2 id="">Submit Button will be enabled at last Question</h2>
 
-    <hr width=50%>
+    <!--<hr width=50%>
     <h5 align="center">Developed by :- <strong>Abhishek Chauhan</strong> and <strong>Vinay Saurabh</strong></h5>
-    <hr width=50%>
+    <hr width=50%>-->
 
     <script>
             // Set the date we're counting down to
