--- a/main/templates/main/testscreen.html
+++ b/main/templates/main/testscreen.html
@@ -81,38 +81,39 @@
     <hr width=50%>-->
 
     <script>
-            // Set the date we're counting down to
-            var countDownDate = new Date("September 17, 2020 15:26:00").getTime();
+            function my_onkeydown_handler( event ) {
+            switch (event.keyCode) {
+                case 116 : // 'F5'
+                    event.preventDefault();
+                    event.keyCode = 0;
+                    window.status = "F5 disabled";
+                    break;
+                }
+            }
+            document.addEventListener("keydown", my_onkeydown_handler);
+                    function startTimer(duration, display) {
+                    var timer = duration, minutes, seconds;
+                    var x = setInterval(function () {
+                        minutes = parseInt(timer / 60, 10);
+                        seconds = parseInt(timer % 60, 10);
 
-            // Update the count down every 1 second
-            var x = setInterval(function() {
+                        minutes = minutes < 10 ? "0" + minutes : minutes;
+                        seconds = seconds < 10 ? "0" + seconds : seconds;
 
-                // Get todays date and time
-                var now = new Date().getTime();
+                        document.getElementById('demo').innerHTML = minutes + "m " + seconds +" s";
 
-                // Find the distance between now and the count down date
-                var distance = countDownDate - now;
+                        if (--timer < 0) {
+                            submitform();
+                            window.location.href='';
+                        }
+                    }, 1000);
+                }
 
-                // Time calculations for days, hours, minutes and seconds
-                var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-               
-                // Output the result in an element with id="demo"
-                document.getElementById("demo").innerHTML = minutes + "m " + seconds + "  s ";
-               
-
-                // If the count down is over, write some text 
-                if (minutes==0) {
-                    document.getElementById("demo").innerHTML = "Test Duration Expired You must press the final submit button";
-                    if(seconds==0){
-                    clearInterval(x);
-                    submitform()
-                    window.location = "https://gtcscholarshiptest.herokuapp.com/feedback/"
-                    
-                }}
-            }, 1000);
+        window.onload = function () {
+            var time = 60*50,
+                display = document.querySelector('#time');
+            startTimer(time, display);
+        };
 
             function submitform(){
                 alert('Your time has finished');
@@ -128,7 +129,6 @@
 
             var navbar = document.getElementById("navbar");
             var sticky = navbar.offsetTop;
-
 
             function myFunction() {
                 if (window.pageYOffset >= sticky) {
