--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -73,6 +73,11 @@
             Other Helpline Numbers: 08684000906 / 920 / 925 / 934
         </p>
     </div>
+    <hr width=50%>
+    <h5 align="center">
+    Developed by :- <strong>Abhishek Chauhan</strong> and <strong>Vinay Saurabh</strong></h5>
+    <h5 align="center"><strong> BTECH CSE(2017) </strong></h5>
+    <hr width=50%>
     <p align="center" id='about_data'><b>COPYRIGHT &copy; 2014-2020 GTC </b></p>
 
     </form>
