--- a/main/templates/main/studentregister.html
+++ b/main/templates/main/studentregister.html
@@ -117,7 +117,7 @@
 
             <div class="row">
                 <div class="col2">
-                    <input type='text' name='email' placeholder='Email*' required>
+                    <input type='email' name='email' placeholder='Email*' required>
                 </div>
             </div>
 
