--- a/static/css/main.css
+++ b/static/css/main.css
@@ -37,8 +37,8 @@ body{
     color:  #2193b0;
 }
 #gst{
-    margin: 0px 15% 30px 15%;
-    font-size: 72%;
+    margin: 0px 9% 30px 9%;
+    font-size: 79%;
     color:#2193b0; 
 }
 
@@ -61,7 +61,6 @@ body{
 }
 
 .logo{
-    margin-top: 10px;
     float: left;
     width: 30%;
 }
@@ -327,17 +326,6 @@ input[type=submit] {
     cursor: pointer;
   }
 
-  #result_btn {
-    background-color: #2193b0;
-    color: white;
-    font-size: 125%;
-    width: 10%;
-    padding: 18px 18px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-
   #admin {
     float: right;
     background-color: #2193b0;
@@ -595,15 +583,15 @@ input[type=submit] {
         .next {
         cursor: pointer;
         position: absolute;
-        top: 41%;
+        top: 50%;
         width: auto;
         padding: 16px;
         margin-top: -22px;
-        color: black;
+        color: white;
         font-weight: bold;
-        font-size: 40px;
+        font-size: 18px;
         transition: 0.6s ease;
-        border-radius: 3px 3px 3px 3px;
+        border-radius: 0 3px 3px 0;
         user-select: none;
         }
 
@@ -615,7 +603,6 @@ input[type=submit] {
 
         /* On hover, add a black background color with a little bit see-through */
         .next:hover {
-        color: white;
         background-color: rgba(0,0,0,0.8);
         }
 
@@ -651,7 +638,7 @@ input[type=submit] {
         transition: background-color 0.6s ease;
         }
 
-        .dot:hover {
+        .active, .dot:hover {
         background-color: #717171;
         }
 
