--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -74,11 +74,13 @@
         </p>
     </div>
     <div class="developed animated bounceInLeft">
+    <p align="center" id='developed_data'>
         <hr width=50%>
         <h5 align="center">
         Developed by :- <strong>Abhishek Chauhan</strong> and <strong>Vinay Saurabh</strong></h5>
         <h5 align="center"><strong> BTECH CSE(2017) </strong></h5>
         <hr width=50%>
+    </p>
     </div>
     <p align="center" id='about_data'><b>COPYRIGHT &copy; 2014-2020 GTC </b></p>
 
