--- a/static/css/main.css
+++ b/static/css/main.css
@@ -55,6 +55,13 @@ body{
     color:#2193b0;
 }
 
+#developed_data{
+    margin-left: 15px;
+    margin-right: 15px;
+    font-weight: 500;
+    font-size: 110%;
+}
+
 .gtc{
     float: left;
     width: 70%;
