--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -242,6 +242,17 @@ body{
     text-align: center;
   }
 
+.developed{
+    border-radius: 5px;
+    background-color: whitesmoke;
+    padding: 10px;
+    margin-left: 5%; 
+    margin-right: 5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    text-align: center;
+  }
+
 .main_student_login{
   border-radius: 5px;
   box-shadow: 0px 0px 30px 3px rgba(0, 0, 0, 0.4);
