--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -77,7 +77,7 @@
     <p align="center" id='developed_data'>
         <hr width=50%>
         <h5 align="center">
-        Developed by :- <strong>Abhishek Chauhan</strong> and <strong>Vinay Saurabh</strong></h5>
+        Developed by :- <strong>Abhishek Chauhan</strong> & <strong>Vinay Saurabh</strong></h5>
         <h5 align="center"><strong> BTECH CSE(2017) </strong></h5>
         <hr width=50%>
     </p>
