--- a/static/css/main.css
+++ b/static/css/main.css
@@ -37,8 +37,8 @@ body{
     color:  #2193b0;
 }
 #gst{
-    margin: 0px 9% 30px 9%;
-    font-size: 79%;
+    margin: 0px 15% 30px 15%;
+    font-size: 72%;
     color:#2193b0; 
 }
 
@@ -56,10 +56,8 @@ body{
 }
 
 #developed_data{
-    margin-left: 15px;
-    margin-right: 15px;
     font-weight: 500;
-    font-size: 110%;
+    font-size: 100%;
 }
 
 .gtc{
@@ -68,6 +66,7 @@ body{
 }
 
 .logo{
+    margin-top:25px;
     float: left;
     width: 30%;
 }
@@ -248,6 +247,17 @@ body{
     text-align: center;
   }
 
+.developed{
+    border-radius: 5px;
+    background-color: white;
+    padding: 10px;
+    margin-left: 5%; 
+    margin-right: 5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    text-align: center;
+  }
+
 .main_student_login{
   border-radius: 5px;
   box-shadow: 0px 0px 30px 3px rgba(0, 0, 0, 0.4);
@@ -328,6 +338,17 @@ input[type=submit] {
     font-size: 150%;
     width: 20%;
     padding: 20px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  #result_btn {
+    background-color: #2193b0;
+    color: white;
+    font-size: 125%;
+    width: 10%;
+    padding: 18px 18px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -590,15 +611,15 @@ input[type=submit] {
         .next {
         cursor: pointer;
         position: absolute;
-        top: 50%;
+        top: 41%;
         width: auto;
         padding: 16px;
         margin-top: -22px;
-        color: white;
+        color: black;
         font-weight: bold;
-        font-size: 18px;
+        font-size: 40px;
         transition: 0.6s ease;
-        border-radius: 0 3px 3px 0;
+        border-radius: 3px 3px 3px 3px;
         user-select: none;
         }
 
@@ -610,6 +631,7 @@ input[type=submit] {
 
         /* On hover, add a black background color with a little bit see-through */
         .next:hover {
+        color: white;
         background-color: rgba(0,0,0,0.8);
         }
 
@@ -645,7 +667,7 @@ input[type=submit] {
         transition: background-color 0.6s ease;
         }
 
-        .active, .dot:hover {
+        .dot:hover {
         background-color: #717171;
         }
 
