--- a/main/templates/main/student_login.html
+++ b/main/templates/main/student_login.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class='row'>
-                <h3>Don't have an account? <a href="/studentregister">Create here</a>.
+                <h3>Don't have an account? <a href='https://exams-1302.web.app/'>Create here</a>.
             </div>
         </div>
             
