--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -78,7 +78,7 @@
         <hr width=80%>
         <h5 align="center">
         Developed by :- <strong>Abhishek Chauhan</strong> & <strong>Vinay Saurabh</strong></h5>
-        <h5 align="center"><strong> B.Tech Computer Sc and Engineering(2017) </strong></h5>
+        <h5 align="center"><strong> B.Tech Computer Sc & Engineering(2017) </strong></h5>
         <h5 align="center"><strong> Under the Guidance of Ritesh Kumar, HOD Computer Sc & Engineering </strong></h5>
         <h5 align="center"><strong> Phone - 8684000920 </strong></h5>
         <h5 align="center"><strong> Email - hod.cse@gangatechnicalcampus.com </strong></h5>
