--- a/main/templates/main/student_login.html
+++ b/main/templates/main/student_login.html
@@ -36,12 +36,18 @@
                 </div>
             </div>
 
+            <div class="rowt">
+                <div class="col2">
+                    <h5 id='forgotpass'> <a href="/password_reset">Forgot Password?</a>
+                </div>
+            </div>
+
             <div class='row'>
                 <input type='submit' name='save' value='Login' id='log_btn'>
             </div>
 
             <div class='row'>
-                <h3>Don't have an account? <a href='https://exams-1302.web.app/'>Create here</a>.
+                <h3>Don't have an account? <a href="/studentregister">Create here</a>.
             </div>
         </div>
             
