--- a/main/templates/main/password_reset_complete.html
+++ b/main/templates/main/password_reset_complete.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'main/base.html' %}
 {% block title %}Password reset Done{% endblock %}
 {% block content %}
 <div class="row">
@@ -9,7 +9,7 @@
 <div class="card">
 <article class="card-body">
 <p>
-Your password has been set. You may go ahead and <a href="{% url 'login' %}">sign in</a> now.
+Your password has been set. You may go ahead and <a href="/studentlogin">sign in</a> now.
 </p>
 </article>
 </div>
