--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -5,6 +5,7 @@
 {% load crispy_forms_tags %}
 
 <meta name='viewport' content="width=device-width, initial-scale-1.0">
+<script data-ad-client="ca-pub-4367897153518029" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 {% block content %}
     <div class='header'>
