--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -8,6 +8,7 @@
 <script data-ad-client="ca-pub-4367897153518029" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 {% block content %}
+    <script data-ad-client="ca-pub-4367897153518029" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <div class='header'>
         <div class='row'>
             <div class='logo'>
