--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -36,6 +36,9 @@
                 <input type= 'submit' name='lsave' value='Login' id='login'>
             </div>
             <div class='home_row1'>
+                <input type= 'submit' name='tsave' value='Demo Test' id='doc_btn1'>
+            </div>
+            <div class='home_row'>
                 <input type= 'submit' name='msave' value='Exam Pattern' id='doc_btn1'>
             </div>
             <div class='home_row'>
