--- a/main/templates/main/feedback.html
+++ b/main/templates/main/feedback.html
@@ -26,41 +26,41 @@
             <hr>
 
             <div class="rowt">
-                <div class='label'>
+                <div class='label_feed'>
                     <label>Name</label>
                 </div>
 
-                <div class="field">
+                <div class="field_feed">
                     <input type='text' name='name' id='name' required placeholder={{data.firstname}} disabled>
                 </div>
             </div>
 
             <div class="rowt">
-                <div class='label'>
+                <div class='label_feed'>
                     <label>Father Name</label>
                 </div>
 
-                <div class="field">
+                <div class="field_feed">
                     <input type='text' name='name' id='name' required placeholder={{data.fname}} disabled>
                 </div>
             </div>
 
             <div class="rowt">
-                <div class='label'>
+                <div class='label_feed'>
                     <label>Email</label>
                 </div>
 
-                <div class="field">
+                <div class="field_feed">
                     <input type='text' name='name' id='name' required placeholder={{data.email}} disabled>
                 </div>
             </div>
             
             <div class="rowt">
-                <div class='label'>
+                <div class='label_feed'>
                     <label>Feedback</label>
                 </div>
 
-                <div class="field">
+                <div class="field_feed">
                     <textarea rows='8' cols='100' name='feedback' id='feedback' placeholder='Enter your Feedback here .....' required> </textarea>
                 </div>
             </div>
