--- a/main/templates/main/student_login.html
+++ b/main/templates/main/student_login.html
@@ -38,7 +38,7 @@
 
             <div class="rowt">
                 <div class="col2">
-                    <h5 id='forgotpass'> <a href="/password_reset">Forgot Password?</a>
+                    <h5 id='forgotpass'> <a href="/password_reset" style='color:#121212;'>Forgot Password?</a>
                 </div>
             </div>
 
