--- a/main/templates/main/taketest.html
+++ b/main/templates/main/taketest.html
@@ -60,6 +60,17 @@
             <div class="rowt">
 
                 <div class='label'>
+                    <label>Time per Question</label>
+                </div>
+
+                <div class="field">
+                   <input type="text" id='60' name="60" placeholder='60seconds' disabled>
+                </div>
+            </div>
+
+            <div class="rowt">
+
+                <div class='label'>
                     <label>Subject</label>
                 </div>
 
