--- a/main/templates/main/testscreen.html
+++ b/main/templates/main/testscreen.html
@@ -13,7 +13,8 @@
                 <img src = "/media/images/ganga.png", height=160, width=180>
             </div>
             <div class='gtc'>
-                <h1 id='row1_s'>Ganga Technical Campus</h1>  
+                <h1 id='row1_s'>Ganga Technical Campus</h1> 
+                <h3 id='row2_s'> Contact - 8684000920 / 906 / 925 / 934</h3> 
             </div>
         </div>
     </div>
