--- a/main/templates/main/studentregister.html
+++ b/main/templates/main/studentregister.html
@@ -210,7 +210,7 @@
             </div>
 
             <div class='row'>
-                <h3>Already have an account? <a href="/studentlogin">Log in</a>.
+                <h3 id='a'>Already have an account? <a href="/studentlogin">Log in</a>.</h3>
             </div>
         </div>
     </form>
