--- a/main/templates/main/taketest.html
+++ b/main/templates/main/taketest.html
@@ -25,7 +25,7 @@
         <h1 align='left' style='color:#2193b0; font-size:135%;'>2. Don't right click of mouse</h1>
         <h1 align='left' style='color:#2193b0; font-size:135%;'>3. Don't minimize Browser window</h1>
         <h1 align='left' style='color:#2193b0; font-size:135%;'>4. Don't press home or back button </h1>
-        <h1 align='left' style='color:#2193b0; font-size:150%;'><u>All the above activities will lead to test auto submit</u> and you won't be able to five exam again</h1>
+        <h1 align='left' style='color:#2193b0; font-size:150%;'><u>All the above activities will lead to test auto submit</u> and you won't be able to give exam again</h1>
     </div>
 
     <form method = 'POST' class='form-group'>
