--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -5,6 +5,10 @@
 <head>
     <title>{% block title %} Ganga Technical Webiste {% endblock %}</title>
 
+    <meta charset="utf-8">
+    <meta name="viewport" content ="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#2193b0">
+
     {% block style%}
     <link rel = 'stylesheet' type='text/css' href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
